fix: AU-1528: Fix too wide tags (#699)

--- a/public/themes/custom/hdbt_subtheme/src/scss/components/view/_application-search.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/components/view/_application-search.scss
@@ -182,7 +182,7 @@
     padding: 0;
   }
   .views-field-field-avustuslaji {
-    padding: var(--spacing-xs) var(--spacing-layout-l) 0 var(--spacing-m);
+    padding: var(--spacing-xs) var(--spacing-layout-xl) 0 var(--spacing-m);
     .tag_avustuslaji {
       display: inline-block;
       padding: var(--spacing-3-xs) var(--spacing-xs);
